[package]
name = "transactions-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "cargo", "env"] }
csv = "1.4.0"
derive_more = { version = "2.0.1", features = ["full"] }
extension-traits = "2.0.1"
futures = "0.3.31"
futures-util = "0.3.31"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
