[package]
name = "transactions-example"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
csv = "1.4"
derive_more = { version = "2.0", features = ["full"] }
extension-traits = "2.0"
futures = "0.3"
futures-util = "0.3"
rust_decimal = "1.39"
rust_decimal_macros = "1.39"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
